@@ -10,14 +10,14 @@ VersionX.panel.TemplateVariables = function(config) {
             layout: 'column',
             border: false,
             items: [{
-                columnWidth: '48%',
+                columnWidth:.5,
                 layout: 'form',
                 border: false,
                 items: [{
                     xtype: (VersionX.inVersion) ? 'hidden' : 'textfield', //'versionx-combo-templates',
-                    fieldLabel: _('tmplvar'),
+                    fieldLabel: _('tv'),
                     name: 'fltr_templatevar',
-                    width: 200,
+                    width: '95%',
                     id: 'tmplvar-f-templatevar',
                     value: (VersionX.inVersion) ? MODx.request.id : ''
                     
@@ -26,24 +26,24 @@ VersionX.panel.TemplateVariables = function(config) {
                     fieldLabel: _('user'),
                     name: 'fltr_user',
                     hiddenName: 'fltr_user',
-                    width: 200,
+                    anchor: '1',
                     id: 'tmplvar-f-user'
                 },{
                     xtype: 'datefield',
                     fieldLabel: _('versionx.filter.datefrom'),
                     name: 'fltr_from',
-                    width: 200,
+                    anchor: '1',
                     id: 'tmplvar-f-from'
                 }]
             },{
-                columnWidth: '48%',
+                columnWidth:.5,
                 layout: 'form',
                 border: false,
                 items: [{
                     xtype: (VersionX.inVersion) ? 'hidden' : 'modx-combo-category',
                     fieldLabel: _('category'),
                     name: 'fltr_category',
-                    width: 200,
+                    anchor: '1',
                     id: 'tmplvar-f-category'
                 },{ 
                     fieldLabel: '',
@@ -53,7 +53,7 @@ VersionX.panel.TemplateVariables = function(config) {
                     xtype: 'datefield',
                     fieldLabel: _('versionx.filter.dateuntil'),
                     name: 'fltr_until',
-                    width: 200,
+                    anchor: '1',
                     id: 'tmplvar-f-until'
                 }]
             }]
@@ -61,21 +61,32 @@ VersionX.panel.TemplateVariables = function(config) {
             layout: 'column',
             padding: '10px 0 0 0',
             border: false,
+            defaults: {
+                border: false
+            },
             items: [{
-                columnWidth: '30%',
-                border: false,
+                width: 90,
+                items: [{
+                    border: false,
+                    html: '&nbsp;'
+                }]
+            },{
                 items: [{
                     xtype: 'button',
                     handler: this.doFilter,
                     text: _('versionx.filter',{what: _('tmplvars')})
                 }]
             },{
-                columnWidth: '30%',
-                border: false,
                 items: [{
                      xtype: 'button',
                     handler: this.resetFilter,
                     text: _('versionx.filter.reset')
+                }]
+            },{
+                columnWidth: 1,
+                items: [{
+                    html: '&nbsp;',
+                    border: false
                 }]
             }]
         }],
